fix: layout overlap

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -165,9 +165,10 @@
   position: relative;
   z-index: 3;
   width: 100%;
-  height: 1024px;
-  opacity: 0;
+  height: 768px;
+  transform: translateY(20%);
   margin-top: $margin--2xl;
+  margin-bottom: $margin--lg;
 }
 
 #pixel5-2,
@@ -197,7 +198,7 @@
 }
 
 #pixel5-4 {
-  top: 15%;
+  top: 5%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -221,8 +222,10 @@
 
 .content-highlights {
   position: relative;
+  margin-top: $margin--2xl;
   padding-top: $spacing--4xl;
   padding-bottom: $spacing--4xl;
+  margin-bottom: $margin--2xl;
   &-cards {
     position: relative;
     margin-top: $margin--lg;
